--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url(styles/header.css);
 :root {
     --cor-de-fundo: #ebecee;
 }
@@ -5,6 +6,4 @@
 body {
     background-color: var(--cor-de-fundo);
 }
-h1 {
-    background-color: white;
-}
+
